refactor(model/type): intersection type and union type